fix: scroll visible

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,7 @@ body {
 }
 
 .background-image {
+  overflow: hidden;
   min-height: 100svh;
   background-image: url(/assets/img/background_image/background-desktop.png);
   background-repeat: no-repeat;
@@ -374,7 +375,7 @@ h1 {
 
 footer {
   position: absolute;
-  bottom: 0;
+  bottom: 2%;
   width: 100%;
 }
 
@@ -399,7 +400,7 @@ footer .copyright a:hover {
   align-items: center;
   justify-content: center;
   margin-top: 25px;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
   list-style-type: none;
 }
 
@@ -491,6 +492,7 @@ footer .copyright a:hover {
   }
 
   .background-image {
+    overflow: visible;
     background-image: url(../assets/img/background_image/background-mobile.jpg);
   }
 
@@ -501,6 +503,7 @@ footer .copyright a:hover {
   .pfp {
     margin: 20% 0 0 0;
   }
+
   footer {
     position: relative;
     margin-top: 40px;
